istio/grafana/grafana-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  gateways:
    - istio-gateway
  hosts:
    - grafana.local
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
